--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="#0b1020">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Sky Hopper">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%238fc9ff'/%3E%3Cstop offset='1' stop-color='%234a79ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='512' height='512' rx='112' fill='url(%23g)'/%3E%3Ccircle cx='256' cy='260' r='120' fill='%23ffe66d'/%3E%3Ccircle cx='212' cy='238' r='18' fill='%230b1020'/%3E%3Ccircle cx='300' cy='238' r='18' fill='%230b1020'/%3E%3Cpath d='M188 308c22 30 62 46 92 46s70-16 92-46' fill='none' stroke='%230b1020' stroke-width='18' stroke-linecap='round'/%3E%3C/svg%3E">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'%3E%3Crect width='96' height='96' rx='20' fill='%234a79ff'/%3E%3Ccircle cx='48' cy='50' r='26' fill='%23ffe66d'/%3E%3C/svg%3E">
     <title>Sky Hopper</title>
     <style>
       :root {
@@ -56,6 +63,13 @@
         margin-top: 0.25rem;
         font-size: 0.9rem;
         opacity: 0.9;
+      }
+
+      .version {
+        font-size: 0.75rem;
+        letter-spacing: 0.18em;
+        text-transform: uppercase;
+        opacity: 0.7;
       }
 
       .overlay {
@@ -127,6 +141,7 @@
     <div class="hud">
       <h1>Sky Hopper</h1>
       <p>Tap left/right or use arrow keys. Bounce higher than the clouds.</p>
+      <div class="version">v3</div>
     </div>
     <div class="score" id="score">Score 0</div>
     <canvas id="game" width="360" height="640" aria-label="Sky Hopper game"></canvas>
@@ -370,6 +385,12 @@
       bindTouch(rightZone, "right");
       window.addEventListener("resize", resizeCanvas);
       resizeCanvas();
+
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker.register("./sw.js").catch(() => {});
+        });
+      }
     </script>
   </body>
 </html>
