--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no">
     <meta name="theme-color" content="#1b1f3b">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -13,7 +13,7 @@
     <style>
       :root {
         color-scheme: light;
-        font-family: "Segoe UI", system-ui, -apple-system, sans-serif;
+        font-family: "Plus Jakarta Sans", "Segoe UI", system-ui, -apple-system, sans-serif;
       }
 
       * {
@@ -23,21 +23,26 @@
       }
 
       body {
-        background: linear-gradient(180deg, #b8e1ff 0%, #6cb3ff 50%, #b8f5d7 100%);
+        background: radial-gradient(circle at top, #fef7ff 0%, #e1efff 35%, #a8d6ff 70%, #74b2ff 100%);
         color: #0b1020;
         min-height: 100vh;
         display: flex;
         align-items: stretch;
         justify-content: center;
         overflow: hidden;
+        text-rendering: optimizeLegibility;
+        touch-action: manipulation;
+        user-select: none;
+        -webkit-user-select: none;
       }
 
       .wrap {
         display: grid;
-        grid-template-rows: auto 1fr auto;
+        grid-template-rows: auto 1fr auto auto;
         width: min(100%, 560px);
         height: 100vh;
-        padding: 16px 16px 20px;
+        padding: 20px 18px 24px;
+        gap: 16px;
       }
 
       header {
@@ -45,30 +50,33 @@
         align-items: center;
         justify-content: space-between;
         gap: 12px;
+        padding: 4px 2px;
       }
 
       h1 {
-        font-size: 1.25rem;
-        font-weight: 700;
+        font-size: 1.4rem;
+        font-weight: 800;
+        letter-spacing: -0.02em;
       }
 
       .pill {
-        background: rgba(255, 255, 255, 0.75);
-        padding: 6px 12px;
+        background: rgba(255, 255, 255, 0.9);
+        padding: 8px 14px;
         border-radius: 999px;
         font-size: 0.85rem;
-        font-weight: 600;
+        font-weight: 700;
+        box-shadow: 0 8px 16px rgba(24, 41, 87, 0.15);
       }
 
       .game-panel {
         position: relative;
-        background: rgba(255, 255, 255, 0.6);
-        border-radius: 24px;
-        box-shadow: 0 18px 40px rgba(24, 41, 87, 0.25);
+        background: linear-gradient(160deg, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.5));
+        border-radius: 28px;
+        box-shadow: 0 24px 50px rgba(24, 41, 87, 0.25);
         overflow: hidden;
-        margin: 12px 0;
         display: grid;
         place-items: center;
+        border: 1px solid rgba(255, 255, 255, 0.7);
       }
 
       canvas {
@@ -83,10 +91,11 @@
         inset: 0;
         display: grid;
         place-items: center;
-        background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(6px);
+        background: rgba(255, 255, 255, 0.75);
+        backdrop-filter: blur(10px);
         text-align: center;
         padding: 24px;
+        gap: 10px;
       }
 
       .overlay.hidden {
@@ -94,23 +103,32 @@
       }
 
       .overlay h2 {
-        font-size: 1.4rem;
-        margin-bottom: 8px;
+        font-size: 1.5rem;
+        margin-bottom: 4px;
       }
 
       .overlay p {
         font-size: 0.95rem;
-        margin-bottom: 16px;
+        margin-bottom: 8px;
+        color: rgba(11, 16, 32, 0.75);
       }
 
       button {
         border: none;
         border-radius: 999px;
-        padding: 10px 18px;
+        padding: 12px 20px;
         font-weight: 700;
         background: #1b1f3b;
         color: white;
         cursor: pointer;
+        box-shadow: 0 10px 20px rgba(27, 31, 59, 0.2);
+        touch-action: manipulation;
+      }
+
+      .hint {
+        font-size: 0.85rem;
+        font-weight: 600;
+        color: rgba(11, 16, 32, 0.65);
       }
 
       .controls {
@@ -121,18 +139,19 @@
 
       .control-btn {
         flex: 1;
-        background: rgba(255, 255, 255, 0.8);
+        background: rgba(255, 255, 255, 0.85);
         color: #1b1f3b;
-        border-radius: 16px;
-        padding: 12px 0;
-        font-weight: 600;
-        border: 2px solid rgba(27, 31, 59, 0.15);
+        border-radius: 18px;
+        padding: 14px 0;
+        font-weight: 700;
+        border: 1px solid rgba(27, 31, 59, 0.1);
+        box-shadow: 0 12px 22px rgba(24, 41, 87, 0.15);
       }
 
       .meta {
-        font-size: 0.8rem;
+        font-size: 0.82rem;
         text-align: center;
-        color: rgba(11, 16, 32, 0.7);
+        color: rgba(11, 16, 32, 0.65);
       }
 
       @media (min-width: 600px) {
@@ -154,7 +173,8 @@
         <div class="overlay" id="overlay">
           <div>
             <h2>Hop higher!</h2>
-            <p>Tap Start, then tilt or use the on-screen buttons to bounce on platforms.</p>
+            <p>Tap Start, then tilt your iPad or use the on-screen buttons to bounce on platforms.</p>
+            <p class="hint" id="motion-hint">We will ask for motion access the first time you play.</p>
             <button id="start">Start game</button>
           </div>
         </div>
@@ -176,6 +196,7 @@
       const startBtn = document.getElementById("start");
       const leftBtn = document.getElementById("left");
       const rightBtn = document.getElementById("right");
+      const motionHint = document.getElementById("motion-hint");
 
       const state = {
         width: canvas.width,
@@ -315,12 +336,35 @@
         requestAnimationFrame(loop);
       };
 
-      const startGame = () => {
+      const enableMotionControls = async () => {
+        if (!("DeviceOrientationEvent" in window)) {
+          motionHint.textContent = "Motion controls are not supported on this device.";
+          return;
+        }
+
+        if (typeof DeviceOrientationEvent.requestPermission === "function") {
+          try {
+            const result = await DeviceOrientationEvent.requestPermission();
+            if (result !== "granted") {
+              motionHint.textContent = "Motion access denied. Use on-screen buttons instead.";
+            } else {
+              motionHint.textContent = "Tilt control enabled. Keep the device steady!";
+            }
+          } catch (error) {
+            motionHint.textContent = "Motion access unavailable. Use on-screen buttons instead.";
+          }
+        } else {
+          motionHint.textContent = "Tilt control enabled. Keep the device steady!";
+        }
+      };
+
+      const startGame = async () => {
         resizeCanvas();
         resetGame();
         updateScore();
         overlay.classList.add("hidden");
         state.running = true;
+        await enableMotionControls();
       };
 
       const registerControls = () => {
@@ -361,6 +405,14 @@
       updateScore();
       draw();
       loop();
+
+      window.addEventListener(
+        "dblclick",
+        (event) => {
+          event.preventDefault();
+        },
+        { passive: false }
+      );
 
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
