Add Bertrand's Page with neon disco facts

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         <div class="cta-row">
           <a class="cta" href="./game.html">Play the Penguin Jump game</a>
           <a class="cta secondary" href="./armand.html">See the Armand countdown</a>
+          <a class="cta secondary" href="./bertrand.html">Visit Bertrand's Page</a>
         </div>
       </section>
 
@@ -163,6 +164,11 @@
           <h2>More pages soon</h2>
           <p>New sections will appear here as you request them. The layout is ready to scale.</p>
           <a href="#">Stay tuned →</a>
+        </article>
+        <article class="card">
+          <h2>Bertrand's Page</h2>
+          <p>Neon disco facts and links celebrating Daft Punk and a fictional David Blow.</p>
+          <a href="./bertrand.html">Open Bertrand's Page →</a>
         </article>
       </section>
 
